// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util Expand query Dates should expand regex successfully 1`] = `
Object {
  "limit": 100,
  "query": Object {
    "$or": Array [
      Object {
        "time": Object {
          "$gt": Object {
            "$treatAsDatetime": "2019-06-18T20:55:26.711Z",
          },
        },
      },
      Object {
        "age": Object {
          "$lt": Object {
            "$treatAsDatetime": "2019-06-18T20:55:26.711Z",
          },
        },
      },
    ],
    "name": "Me myself",
  },
  "skip": 2,
}
`;

exports[`util Expand query Regex should expand regex successfully 1`] = `
Object {
  "limit": 100,
  "query": Object {
    "name": "Me myself",
    "title": Object {
      "$options": "i",
      "$regex": "/developer/i",
    },
  },
  "skip": 2,
}
`;

exports[`util deflateValue when value is complex nested object should recursively convert value to plain object without field metadata 1`] = `
Object {
  "biz": Array [
    true,
    "xyz",
    2018-02-24T09:20:33.885Z,
    342.234,
    Object {
      "downloadUrl": "down3",
      "mimeType": "image/jpeg",
      "ref": "f3",
    },
    Object {
      "fizz": "buzz",
    },
  ],
  "foo": Object {
    "bar": Object {
      "baq": 20,
      "bat": Object {
        "downloadUrl": "down1",
        "mimeType": "image/png",
        "ref": "f2",
      },
      "baz": "abc",
      "bez": 2018-02-22T09:19:33.885Z,
      "buz": false,
    },
  },
}
`;

exports[`util walkEntityPath should call walkFieldPath with the first field (returns dar field) 1`] = `
Object {
  "type": "text",
  "value": "dar value",
}
`;

exports[`util walkFieldPath when the start field has type object should return nested field (fizz) at the specified path 1`] = `
Object {
  "type": "text",
  "value": "buzz",
}
`;

exports[`util walkFieldPath when the start field has type object should support array indices as ints (returns dar field) 1`] = `
Object {
  "type": "text",
  "value": "dar value",
}
`;

exports[`util walkFieldPath when the start field has type object should walk through array indices and return dar field 1`] = `
Object {
  "type": "text",
  "value": "dar value",
}
`;

exports[`util walkFieldPath when the start field is a list should return nested list item (returns boolean item) 1`] = `
Object {
  "type": "boolean",
  "value": true,
}
`;

exports[`util walkFieldPath when the start field is a list should return walk nested object and return dar field 1`] = `
Object {
  "type": "text",
  "value": "dar value",
}
`;
